experiments/liquid_vlm_integration/artifacts/20260128_0424_worker3_red.txt
============================= test session starts ==============================
platform linux -- Python 3.12.6, pytest-9.0.2, pluggy-1.6.0
rootdir: /home/ubuntu/liquid_mono_to_3d
configfile: pytest.ini
plugins: mock-3.15.1, cov-7.0.0, xdist-3.8.0, anyio-4.9.0
collected 0 items / 1 error

==================================== ERRORS ====================================
_ ERROR collecting experiments/liquid_vlm_integration/tests/test_fusion_real_features.py _
/opt/pytorch/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/opt/pytorch/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/local/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/opt/pytorch/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/opt/pytorch/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/local/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/home/ubuntu/liquid_mono_to_3d/experiments/liquid_vlm_integration/tests/test_fusion_real_features.py", line 19
E       print(f"\n✅ Real fusion output: {result['llm_embeddings\].shape}")
E                                               ^
E   SyntaxError: unterminated string literal (detected at line 19)
=========================== short test summary info ============================
ERROR experiments/liquid_vlm_integration/tests/test_fusion_real_features.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.18s ===============================
